--- a/modules/virt-querying-metrics.adoc
+++ b/modules/virt-querying-metrics.adoc
@@ -21,7 +21,7 @@ ifndef::openshift-rosa,openshift-dedicated[]
 The following query can identify virtual machines that are waiting for Input/Output (I/O):
 
 `kubevirt_vmi_vcpu_wait_seconds_total`::
-Returns the wait time (in seconds) for a virtual machine's vCPU. Type: Counter.
+Returns the wait time (in seconds) on IO for a virtual machine’s vCPU. Type: Counter.
 
 A value above '0' means that the vCPU wants to run, but the host scheduler cannot run it yet. This inability to run indicates that there is an issue with I/O.
 
